@@ -1,4 +1,5 @@
 set appHome=..
+set javaHome=C:/WINDOWS/system32/
 
 set cp=%appHome%
 set cp=%cp%;%appHome%/classes
@@ -10,9 +11,7 @@ set cp=%cp%;%appHome%/lib/activation.jar
 set cp=%cp%;%appHome%/lib/jcommon-1.0.9.jar
 set cp=%cp%;%appHome%/lib/jfreechart-1.0.6.jar
 
-set javaHome=C:/WINDOWS/system32/
-set javaOptions=-Xms512M -Xmx512M -XX:+UseParallelGC -XX:+AggressiveHeap
+set javaOptions=-Xms712M -Xmx712M -XX:+CMSIncrementalMode -XX:+UseConcMarkSweepGC
 set mainClass=com.jbooktrader.platform.startup.JBookTrader
 
 %javaHome%javaw.exe -cp "%cp%" %javaOptions% %mainClass% "%appHome%"
-
